<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/authenticationLayout"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/teko"
            android:text="@string/app_name_capital"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/app_phrase"
            android:textColor="@color/colorPrimary" />


        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:onClick="onForgetPasswordClicked"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/logInBtn"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/general_margin"
            android:onClick="onLoginBtnClicked"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/general_margin"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/registerReference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="onRegisterClicked"
                android:text="@string/register_text"
                android:textColor="@color/colorAccent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/gray" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
