<resources>
    <string name="app_name">Sharestead</string>
    <string name="app_name_capital">SHARESTEAD</string>
    <string name="app_phrase">Explore, share and enjoy games</string>
    <string name="preference_welcome">What are you interested in?</string>
    <string name="preference_tap">Tap to select platform/s.</string>
    <string name="preference_explore">Explore</string>
    <string name="home">Home</string>
    <string name="notes">Notes</string>
    <string name="privacy_policy_text">Privacy policy</string>
    <string name="description_recommended_main_game">Recommended popular game</string>
    <string name="best_games">Cool recent games</string>
    <string name="best_more_games">Something for you!</string>
    <string name="login_title">LOG IN</string>
    <string name="login">Log in</string>
    <string name="register_text">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_email">Email *</string>
    <string name="hint_password">Password *</string>
    <string name="hint_repeat_password">Repeat password *</string>
    <string name="login_other_options">OR CONNECT WITH</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hello_blank_fragment" />
    <string name="register_title">JOIN US!</string>
    <string name="login_reference">Already registered?</string>
    <string name="background">Background</string>
    <string name="user_agreement">By creating an account, you agree to our \n Terms of Service and Privacy Policy</string>
    <string name="join_us">JOIN US!</string>
    <string name="game_image_view">Image of game</string>
    <string name="share_search_text">Search for a game</string>
    <string name="progress_bar_loading">Loading</string>
    <string name="empty_email">Email can not be empty</string>
    <string name="recover_positive_button">Recover</string>
    <string name="recover_dialog_title">Recover password</string>
    <string name="cancel">Cancel</string>
    <string name="login_dialog_title">Error with login</string>
    <string name="okay">Okay</string>
    <string name="recovery_email_successful">Recovery email was sent</string>
    <string name="recovery_email_unsuccessful">An error occurred. Please try again later</string>
    <string name="empty_password">Password can not be empty</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="register_account_successful">Account was successfully created</string>
    <string name="press_back">Press BACK again to exit</string>
    <string name="settings">Settings</string>
    <string name="help_and_support"><![CDATA[Help & Support]]></string>
    <string name="profile_name">Profile name</string>
    <string name="profile_email">Profile email</string>
    <string name="change_name">Tap to change name</string>
    <string name="home_text1">Explore</string>
    <string name="home_text2">recommended</string>
    <string name="home_text3">games</string>
    <string name="logo">Logo</string>
    <string name="text_holder" translatable="false">TEXT HOLDER</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="back_arrow">Get back</string>
    <string name="favourite">Favourite</string>
    <string name="save_changes">Save changes</string>
    <string name="priority">Priority</string>
    <string name="delete_note_title">Delete note</string>
    <string name="delete_note_message">Are you sure you want to delete this note?</string>
    <string name="note_deleted">Note deleted</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_message">You will be redirected to our web page with privacy policy.</string>
    <string name="understand" translatable="false">Understand</string>
    <string name="function_not_implemented">This function is not yet implemented</string>
</resources>
